<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Casket Seller Hitesh</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Casket Seller Thread</string>
    <string name="login">Sign in</string>
    <string name="color">Color</string>
    <string name="search_caskets">Search Caskets</string>
    <string name="back">Back to Search</string>
    <string name="record_sale">Record Sale</string>
    <string name="save">Record Sale</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="error">Incorrect user name or password</string>
    <string name="title_activity_search_screen">Search for caskets</string>
    <string name="price_range">Price range</string>
    <string name="price_to">to</string>
    <string name="casket_name">Casket name</string>
    <string name="internal_material">Internal Material</string>
    <string name="title_activity_caskets_display">Caskets</string>
    <string name="exterior_material">Exterior Material</string>

    <string-array name="casketColors">
        <item></item>
        <item>Blue</item>
        <item>Green</item>
        <item>Silver</item>
        <item>Gold</item>
        <item>Pink</item>
        <item>Brown</item>
    </string-array>
    <string-array name="extMaterials">
        <item></item>
        <item>18 gauge</item>
        <item>20 gauge</item>
        <item>Stainless</item>
        <item>Copper</item>
        <item>Brass</item>
        <item>Poplar</item>
        <item>Hardwood</item>
    </string-array>

</resources>